# vidgame

./: CMakeLists.txt  gen_world.cpp  gen_world_func.cpp  main  main.cpp  world_gen.hpp
drawer/: main.cpp  sfml_wrapper.hpp  sfml_wrappers.cpp
world_data/: ch3x5y.json
